--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -12,15 +12,55 @@ body{
                 }
             }
         }
-        div.portatil{ //POR RELLENAR CON ANIMACIONES
-            background-color: red;
+        div.videoPortatil{ 
+            text-align: center;
+            margin-top: 20px;
+            margin-bottom: 100px;
         }
         div.fondoNegro{
+            padding-left: 200px;
+            margin-bottom: 6rem;
+            margin-top: 6rem;
+            padding-top: 6rem;
+            padding-bottom: 6rem;
+            border: 3px solid black;
             color: white;
             background-image: url(../images/fondoNegro.png);
             background-repeat: no-repeat;
             background-size: 100%;
-            height: 300px;
+            h1{
+                font-size: 3.125rem;
+                letter-spacing: -.15625rem;
+            }
+            p{
+                font-size: 1.25rem;
+            }
+        }
+        div.textllamativo{
+            h3{
+                font-size: 2rem;
+            }
+        }
+        div.carussel{
+            div{
+                background-color: red;
+            }
+        }
+        div.experiencias{
+            p{
+                font-size: 1.5rem;
+                color: rgb(61, 71, 81);
+            }
+            h1{
+                font-size: 4.5rem;
+            }
+        }
+        div.portatilBlock{
+            div.row{
+                div.bottom15{
+                    margin-bottom: 1.5rem; //separación del texto por acabar
+                }
+            }
         }
     }
 }
