--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -82,7 +82,6 @@ body{
             }
 
             .block2{
-                padding-bottom: 25px;
                 .imgBlock21{
                     img{
                         width: 100%;
@@ -96,7 +95,55 @@ body{
                     }
                 }
             }
-            
+            .block3{
+                .col{
+                    padding: 44px 56px;
+                    h3{
+                        font-size: 2rem;
+                    }
+                    p{
+                        font-size: 1.25rem;
+                        letter-spacing: -0.0375rem;
+                        line-height: 1.4;
+                    }
+                }
+            }
+            .block4{
+                .imgBlock41{
+                    img{
+                        width: 100%;
+                        border-radius: 30px;
+                    }
+                }
+                .imgBlock42{
+                    img{
+                        width: 100%;
+                        border-radius: 30px;
+                    }
+                }
+            }
+            .block5{
+                .col{
+                    padding: 44px 56px;
+                    h3{
+                        font-size: 2rem;
+                    }
+                    p{
+                        font-size: 1.25rem;
+                        letter-spacing: -0.0375rem;
+                        line-height: 1.4;
+                    }
+                }
+            }
+        }
+        .flujo{
+            p{
+                font-size: 1.5rem;
+                letter-spacing: -.045rem;
+            }
+            h1{
+
+            }
         }
     }
 }
