--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -249,7 +249,7 @@ body{
                             }
                         }
                         .textDescr{
-                            padding-left: 70px;
+                            padding-left: 115px;
                             .etiqueta{
                                 font-size: 1rem;
                                 background-color: rgb(223, 228, 234, 1);
@@ -260,7 +260,8 @@ body{
                             p{
                                 margin-top: .75rem;
                                 margin-bottom: -.75rem;
-                                font-size: 1.5rem;
+                                font-size: 1rem;
+                                font-weight: 500;
                             }
                         }
                     }
@@ -269,11 +270,54 @@ body{
             padding-bottom: 50px;
         }
     }
-    footer{
+    footer {
+        padding: 30px 0px 15px 0px;
         color: white;
-        ul{
-            li{
+        font-weight: 500;
+    
+        p {
+            font-size: .85rem;
+            font-weight: 400;
+        }
+    
+        ul {
+            padding: 0px;
+    
+            li {
                 list-style-type: none;
+                font-size: 13px;
+                font-weight: 400;
+            }
+        }
+    
+        .div {
+            .left-right {
+                .top-left {
+                    h1 {
+                        font-size: 2.5rem;
+                    }
+                }
+    
+                .top-right {
+                    h3 {
+                        font-size: 1.5rem;
+                        font-weight: 500;
+                    }
+                }
+            }
+        }
+    
+        .titulos-footer {
+            div {
+                font-size: 1.25rem;
+                padding-bottom: 15px;
+            }
+        }
+    
+        .tablas-footer {
+            align-items: flex-start;
+            h3{
+                margin-bottom: 4px;
             }
         }
     }
