--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -323,6 +323,56 @@ body{
     }
 }
 
+//boton
+
+.btn-container {
+    position: relative;
+    transition: right 0.3s ease-in-out;
+}
+
+.btn-container:hover .btn-arrow {
+    transform: translateX(10px);
+}
+
+.btn-arrow {
+    background-color: #17d5ff;
+    margin-left: 10px;
+    transition: transform 0.3s ease-in-out;
+}
+
+.arrow-wrapper {
+    opacity: 1;
+    transform: translateX(0);
+    transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+}
+
+.btn-container:hover .arrow-wrapper {
+    opacity: 0;
+    transform: translateX(10px);
+}
+
+/* 🔹 ESTILO DEL BOTÓN */
+.btn-custom {
+    width: 150px;
+    background-color: #DFE4EA;
+    color: #000;
+    padding: 10px 16px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    border-radius: 6px;
+    transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
+}
+
+/* 🔹 HOVER FUNCIONAL */
+.btn-custom:hover {
+    background-color: #007bff;
+    color: #fff;
+}
+
+
 
 //Transiciones
 
