--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -1,23 +1,26 @@
-body{
-    main{
-        div{
-            div{
-                .encabezado1{
+body {
+    main {
+        div {
+            div {
+                .encabezado1 {
                     font-size: 5.75rem;
                     font-weight: 500;
                 }
-                .textEncabezado1{
+
+                .textEncabezado1 {
                     font-size: 1.25rem;
                     font-weight: 400;
                 }
             }
         }
-        div.videoPortatil{ 
+
+        div.videoPortatil {
             text-align: center;
             margin-top: 20px;
             margin-bottom: 100px;
         }
-        div.fondoNegro{
+
+        div.fondoNegro {
             padding-left: 200px;
             margin-bottom: 6rem;
             margin-top: 6rem;
@@ -28,51 +31,63 @@ body{
             background-image: url(../images/fondoNegro.png);
             background-repeat: no-repeat;
             background-size: 100%;
-            h1{
+
+            h1 {
                 font-size: 3.125rem;
                 letter-spacing: -.15625rem;
             }
-            p{
+
+            p {
                 font-size: 1.25rem;
             }
         }
-        div.textllamativo{
-            h3{
+
+        div.textllamativo {
+            h3 {
                 font-size: 2rem;
             }
         }
-        div.carussel{
-            div{
+
+        div.carussel {
+            div {
                 background-color: red;
             }
         }
-        div.experiencias{
-            p{
+
+        div.experiencias {
+            p {
                 font-size: 1.5rem;
                 color: rgb(61, 71, 81);
             }
-            h1{
+
+            h1 {
                 font-size: 4.5rem;
                 margin-bottom: 48px;
             }
         }
+
         .portatilBlock {
-            .block1{
+            .block1 {
                 padding-bottom: 25px;
-                .imgPortatil{
-                    img{
+
+                .imgPortatil {
+                    img {
                         width: 100%;
                         border-radius: 30px;
                     }
-                    
+
                 }
+
                 align-items: center;
+
                 div.bottom15 {
                     padding: 44px 56px;
-                    h3{
+
+                    h3 {
                         font-size: 2rem;
                         margin-bottom: 1.5rem;
                     }
+
                     p {
                         font-size: 1.25rem;
                         letter-spacing: -0.0375rem;
@@ -80,54 +95,64 @@ body{
                     }
                 }
             }
-            .block2{
-                .imgBlock21{
-                    img{
+
+            .block2 {
+                .imgBlock21 {
+                    img {
                         width: 100%;
                         border-radius: 30px;
                     }
                 }
-                .imgBlock22{
-                    img{
+
+                .imgBlock22 {
+                    img {
                         width: 100%;
                         border-radius: 30px;
                     }
                 }
             }
-            .block3{
-                .col{
+
+            .block3 {
+                .col {
                     padding: 44px 56px;
-                    h3{
+
+                    h3 {
                         font-size: 2rem;
                     }
-                    p{
+
+                    p {
                         font-size: 1.25rem;
                         letter-spacing: -0.0375rem;
                         line-height: 1.4;
                     }
                 }
             }
-            .block4{
-                .imgBlock41{
-                    img{
+
+            .block4 {
+                .imgBlock41 {
+                    img {
                         width: 100%;
                         border-radius: 30px;
                     }
                 }
-                .imgBlock42{
-                    img{
+
+                .imgBlock42 {
+                    img {
                         width: 100%;
                         border-radius: 30px;
                     }
                 }
             }
-            .block5{
-                .col{
+
+            .block5 {
+                .col {
                     padding: 44px 56px;
-                    h3{
+
+                    h3 {
                         font-size: 2rem;
                     }
-                    p{
+
+                    p {
                         font-size: 1.25rem;
                         letter-spacing: -0.0375rem;
                         line-height: 1.4;
@@ -135,33 +160,41 @@ body{
                 }
             }
         }
-        .flujo{
-            p{
+
+        .flujo {
+            p {
                 font-size: 1.5rem;
                 letter-spacing: -.045rem;
             }
-            h1{
+
+            h1 {
                 font-size: 4.5rem;
                 margin-bottom: 48px;
             }
         }
-        .portatilBlock2{
-            .block6{
+
+        .portatilBlock2 {
+            .block6 {
                 padding-bottom: 25px;
-                .imgPortatil2{
-                    img{
+
+                .imgPortatil2 {
+                    img {
                         width: 100%;
                         border-radius: 30px;
                     }
-                    
+
                 }
+
                 align-items: center;
+
                 .bottom {
                     padding: 44px 56px;
-                    h3{
+
+                    h3 {
                         font-size: 2rem;
                         margin-bottom: 1.5rem;
                     }
+
                     p {
                         font-size: 1.25rem;
                         letter-spacing: -0.0375rem;
@@ -169,20 +202,24 @@ body{
                     }
                 }
             }
-            .block7{
-                .imgBlock7{
-                    img{
+
+            .block7 {
+                .imgBlock7 {
+                    img {
                         width: 100%;
                         border-radius: 30px;
                     }
-                    .text{
+
+                    .text {
                         padding: 44px 56px;
-                        h3{
+
+                        h3 {
                             font-size: 2rem;
                             letter-spacing: -.08rem;
                             line-height: 1.1;
                             margin-bottom: 1.5rem;
                         }
+
                         p {
                             font-size: 1.25rem;
                             letter-spacing: -0.0375rem;
@@ -192,72 +229,87 @@ body{
                 }
             }
         }
-        .fondoBlanco{
-            div{
-                .texto2{
-                    p{
+
+        .fondoBlanco {
+            div {
+                .texto2 {
+                    p {
                         font-size: 1.5rem;
                     }
-                    h1{
+
+                    h1 {
                         font-size: 3.125rem;
                         margin-bottom: 48px;
                     }
                 }
-                .tripleColumnas{
-                    div{
-                        img{
+
+                .tripleColumnas {
+                    div {
+                        img {
                             width: 100%;
                             border-radius: 30px;
                         }
-                        .title{
+
+                        .title {
                             font-size: 1.25rem;
                             font-weight: 500;
                         }
-                        p{
+
+                        p {
                             font-size: 1rem;
                             font-weight: 500;
                         }
                     }
                 }
             }
+
             padding: 48px 0px;
         }
-        .carusel{
+
+        .carusel {
             padding: 48px 0px;
-            p{
+
+            p {
                 font-size: 1.5rem;
             }
-            h1{
+
+            h1 {
                 font-size: 3.125rem;
             }
         }
-        .vimeo{
-            div{
-                .izquierda{
-                    h1{
+
+        .vimeo {
+            div {
+                .izquierda {
+                    h1 {
                         font-size: 3.125rem;
                     }
                 }
-                .derecha{
-                    div{
+
+                .derecha {
+                    div {
                         align-items: center;
-                        div{
-                            img{
+
+                        div {
+                            img {
                                 width: 288px;
                                 height: 162px;
                                 border-radius: 30px;
                             }
                         }
-                        .textDescr{
+
+                        .textDescr {
                             padding-left: 115px;
-                            .etiqueta{
+
+                            .etiqueta {
                                 font-size: 1rem;
                                 background-color: rgb(223, 228, 234, 1);
                                 border-radius: 10px;
                                 padding: 12px 16px;
                                 margin-bottom: .75rem;
                             }
-                            p{
+
+                            p {
                                 margin-top: .75rem;
                                 margin-bottom: -.75rem;
                                 font-size: 1rem;
@@ -267,29 +319,31 @@ body{
                     }
                 }
             }
+
             padding-bottom: 50px;
         }
     }
+
     footer {
         padding: 30px 0px 15px 0px;
         color: white;
         font-weight: 500;
-    
+
         p {
             font-size: .85rem;
             font-weight: 400;
         }
-    
+
         ul {
             padding: 0px;
-    
+
             li {
                 list-style-type: none;
                 font-size: 13px;
                 font-weight: 400;
             }
         }
-    
+
         .div {
             .left-right {
                 .top-left {
@@ -297,7 +351,7 @@ body{
                         font-size: 2.5rem;
                     }
                 }
-    
+
                 .top-right {
                     h3 {
                         font-size: 1.5rem;
@@ -306,21 +360,30 @@ body{
                 }
             }
         }
-    
+
         .titulos-footer {
             div {
                 font-size: 1.25rem;
                 padding-bottom: 15px;
             }
         }
-    
+
         .tablas-footer {
             align-items: flex-start;
-            h3{
+
+            h3 {
                 margin-bottom: 4px;
             }
         }
     }
+}
+
+.carusel {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
 
 //boton
@@ -351,7 +414,7 @@ body{
     transform: translateX(10px);
 }
 
-/* 🔹 ESTILO DEL BOTÓN */
+/* ESTILO DEL BOTÓN */
 .btn-custom {
     width: 150px;
     background-color: #DFE4EA;
@@ -366,13 +429,75 @@ body{
     transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
 }
 
-/* 🔹 HOVER FUNCIONAL */
+/* HOVER FUNCIONAL */
 .btn-custom:hover {
     background-color: #007bff;
     color: #fff;
 }
 
 
+.arrow-wrapper svg {
+    transition: transform 0.3s ease;
+}
+
+.arrow-wrapper:hover svg {
+    transform: translateX(5px);
+}
 
 //Transiciones
 
+
+@keyframes marquee-container {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(-50%);
+    }
+}
+
+.image-container {
+    overflow: hidden;
+    width: 100%;
+    position: relative;
+}
+
+.image-container::before,
+.image-container::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    width: 100px;
+    height: 100%;
+    z-index: 1;
+}
+
+.image-container::before {
+    left: 0;
+    background: linear-gradient(to right, #f1f5f9, transparent);
+}
+
+.image-container::after {
+    right: 0;
+    background: linear-gradient(to left, #f1f5f9, transparent);
+}
+
+.image-wrapper {
+    display: flex;
+    gap: 5px;
+    width: max-content;
+    animation: marquee-container 30s linear infinite;
+    animation-direction: alternate;
+}
+
+
+.animate {
+    animation: fadeInUp 1s ease forwards;
+}
+
+.transicion-texto-delay {
+    opacity: 0;
+    transform: translateY(100px);
+    animation: fadeInUp 1s ease forwards;
+    animation-delay: 1s; /* Añade un retardo de 1s */
+  }
